--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -8,23 +8,17 @@ services:
       - db-password
     depends_on:
       - db
+  foreend:
+    build: 
+      context: foreend
+      target: development
   db:
-    image: mariadb
+    image: progresql:latest
     restart: always
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent" ]
-      interval: 3s
-      retries: 5
-      start_period: 30s
-    secrets:
-      - db-password
-    volumes:
-      - db-data:/var/lib/mysql
     environment:
-      - MYSQL_DATABASE=example
-      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
-    expose:
-      - 3306
+      - POSTGRES_PASSWORD=mysecrect
+      expose:
+      - 5432
   proxy:
     build: proxy
     ports:
