--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     image: progresql:latest
     restart: always
     environment:
-      - POSTGRES_PASSWORD=mysecrect
+      POSTGRES_PASSWORD=mysecrect
       expose:
       - 5432
   proxy:
